deploymentBE.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nugrohop2003/backend:1.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
  labels:
    name: be-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: backend.zonadesain.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-backend
            port: 
              number: 5000
