deploymentFE.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplikasi-frontend
spec:
  selector:
    matchLabels:
      app: aplikasi-frontend
  template:
    metadata:
      labels:
        app: aplikasi-frontend
    spec:
      containers:
      - name: aplikasi-frontend
        image: nugrohop2003/frontend:1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: aplikasi-frontend
  ports:
  - port: 80
    targetPort: 3000


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  labels:
    name: fe-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.zonadesain.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-frontend
            port: 
              number: 80
